devscripts (2.10.26) UNRELEASED; urgency=low

  * bts: Update documentation for "forwarded" to indicate that it may also
    be used with a URL (for instance, for an upstream bug tracker)
    (Closes: #475896)
  * checkbashisms:
    + Add experimental makefile support (only enabled if -f is used)
    + Modify the "2>&foo" check to allow a valid file descriptor followed
      by a backslash (for line continuations)
    + Check the initial lines of shell script wrappers. Based on a patch from
      Raphael Geissert
    + Fix a couple of the quoted block detection checks so as not to trigger
      on escaped quotes and correctly count quotes within lines containing ''
      or ""
    + Only rebuild the lists of expressions to search for when required,
      rather than for each line of each file
    + Disable "makefile mode" after checking a makefile if the next file to
      check isn't a makefile
    + Several enhancements to heredoc detection:
      - Heredoc delimiters may contain "non word" characters if the delimiter
        is quoted. As a side-effect, delimiters which match one of the bashism
        expressions may now be flagged due to the order in which checks are
        performed.
      - SUS specifies that a heredoc ends on a line consisting solely of a
        delimiter, so we enforce that and also don't check such lines.
      - Delimiters may now contain regular expression meta-characters.
    + Match shell script wrappers that don't pass on parameters when execing
      (for example for scripts which take all input from STDIN)
  * debchange:
    + Allow a changelog with no entries to be created. (Note that
      such a changelog will cause a warning from dpkg-parsehchangelog the
      next time debchange is used with it) (Closes: #475578)
    + Correctly handle control files containing comments when checking
      for NMUs (Closes: #475750)
    + Fix a side-effect of the automagic NMU detection functionality which